data/logs/crawler_20260325_180504.log
2026-03-25 18:05:12 | app.components.graph_viz | INFO | GraphVisualizer initialized
2026-03-25 18:05:12 | app.components.graph_viz | INFO | ✅ Added 9 nodes
2026-03-25 18:05:12 | app.components.graph_viz | INFO | ✅ Graph: 9 nodes, 8 edges
2026-03-25 18:05:13 | app.components.graph_viz | INFO | 📊 Saved: data\temp_graph.html
2026-03-25 18:05:15 | app.utils.exporter | INFO | Exporter initialized: data/crawled_graphs
2026-03-25 18:05:25 | app.components.graph_viz | INFO | GraphVisualizer initialized
2026-03-25 18:05:25 | app.components.graph_viz | INFO | ✅ Added 9 nodes
2026-03-25 18:05:25 | app.components.graph_viz | INFO | ✅ Graph: 9 nodes, 8 edges
2026-03-25 18:05:25 | app.components.graph_viz | INFO | 📊 Saved: data\temp_graph.html
2026-03-25 18:05:26 | __main__ | ERROR | AI refinement error: f-string: single '}' is not allowed (ai_refiner.py, line 328)
Traceback (most recent call last):
  File "C:\Users\Kamra\Desktop\fyp crawler (5)\fyp crawler\app\streamlit_app.py", line 1014, in display_test_cases
    from test_generator.ai_refiner import GeminiTestRefiner
  File "C:\Users\Kamra\Desktop\fyp crawler (5)\fyp crawler\test_generator\ai_refiner.py", line 328
    ✓ NO trailing commas before ] or }
                                     ^
SyntaxError: f-string: single '}' is not allowed
2026-03-25 18:05:27 | app.utils.exporter | INFO | Exporter initialized: data/crawled_graphs
